version 1.1.3 (release tag v1.1.3rel)
=====================================
 * add isoformat method for compatibility with python datetime (issue #152).
 * make 'standard' default calendar for cftime.datetime
   so that dayofwk,dayofyr methods don't fail (issue #169).

version 1.1.2 (release tag v1.1.2rel)
=====================================
 * change dayofwk and dayofyr attributes into properties (issue #158)
 * fix for issue #165 (python datetime should be returned when
   only_use_cftime_datimes=False).

version 1.1.1.2 (release tag v1.1.1.2rel)
=========================================
 * include pyproject.toml in MANIFEST.in so it gets 
   included in source tarball (issue #154).

version 1.1.1.1 (release tag v1.1.1.1rel)
=========================================
 * Fix error installing with pip on python 3.8 by following 
   PEP 517 (issue #148, PR #149)

version 1.1.1 (release tag v1.1.1rel)
=====================================

 * fix microsecond formatting issue, ensure identical results
   computed for arrays and scales (issue #143, PR #146).

version 1.1.0 (release tag v1.1.0rel)
=====================================

 * improved exceptions for time differences (issue #128, PR #131).

 * fix intersphinx entries (issue #133, PR #133)

 * make only_use_cftime_datetimes=True by default, so cftime datetime
   instances are returned by default by num2date (instead of returning python
   datetime instances where possible). Issue #136, PR #135.

 * Add daysinmonth attribute (issue #137, PR #138).

 * If only_use_python_datetimes=True and only_use_cftime_datetimes=False,
   num2date only returns python datetime instances and raises an exception
   if this is not possible.  num2pydate convenience function added which just calls
   num2date with only_use_python_datetimes=True and
   only_use_cftime_datetimes=False.
   Remove positive times check, raise ValueError if python datetime
   tries to compute a date before MINYEAR (issue #134, PR #139)
