@@ -697,6 +697,14 @@ class cftimeTestCase(unittest.TestCase):
         d2 = real_datetime(1582,10,4,12)
         assert (d1.dayofwk == d2.dayofwk == 0)
         assert (d1.dayofyr == d2.dayofyr == 277)
+
+        # issue 173: Return -1 from dayofwk and dayofyr when calendar
+        # is ''
+        d1 = datetimex(1582, 10, 4, 12, calendar='')
+        assert (d1.dayofwk == d1.dayofyr == -1)
+        d1 = datetimex(2020, 5, 20, calendar='')
+        assert (d1.dayofwk == d1.dayofyr == -1)
+        
         # issue 71: negative reference years
         # https://coastwatch.pfeg.noaa.gov/erddap/convert/time.html
         # gives 2446433 (365 days more - is it counting year 0?)
