@@ -1,3 +1,8 @@
+version <> (release tag v<>rel)
+=====================================
+* Return -1 from dayofwk and dayofyr when calendar is '' (issue
+  #173).
+
 version 1.1.3 (release tag v1.1.3rel)
 =====================================
  * add isoformat method for compatibility with python datetime (issue #152).
